[gd_scene load_steps=9 format=3 uid="uid://crwqu61bd5osl"]

[ext_resource type="Script" path="res://clock_cal.gd" id="1_wi1q7"]
[ext_resource type="FontFile" uid="uid://ck44ko777mxdt" path="res://NanumGothicBold.ttf" id="2_yx64y"]
[ext_resource type="PackedScene" uid="uid://btysv8q6rp8ku" path="res://panel_option.tscn" id="3_5m56c"]
[ext_resource type="Texture2D" uid="uid://dxe61smpvqaqf" path="res://icon.png" id="3_p67cb"]

[sub_resource type="Theme" id="Theme_40ysy"]
default_font = ExtResource("2_yx64y")
default_font_size = 900

[sub_resource type="Theme" id="Theme_gywcf"]
default_font = ExtResource("2_yx64y")
default_font_size = 280

[sub_resource type="Theme" id="Theme_qaph5"]
default_font = ExtResource("2_yx64y")
default_font_size = 160

[sub_resource type="Theme" id="Theme_7sear"]
default_font = ExtResource("2_yx64y")
default_font_size = 170

[node name="ClockCalScn" type="Node2D"]
script = ExtResource("1_wi1q7")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LabelTime" type="Label" parent="."]
offset_top = -174.0
offset_right = 3840.0
offset_bottom = 864.0
theme = SubResource("Theme_40ysy")
text = "00:00:00"
horizontal_alignment = 1

[node name="LabelDate" type="Label" parent="."]
offset_top = 680.0
offset_right = 1920.0
offset_bottom = 1030.0
theme = SubResource("Theme_gywcf")
text = "0000-00-00 ì›”"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelWeather" type="Label" parent="."]
visible = false
offset_top = 1018.0
offset_right = 1920.0
offset_bottom = 2160.0
theme = SubResource("Theme_qaph5")
clip_text = true

[node name="LabelDayInfo" type="Label" parent="."]
visible = false
offset_top = 1018.0
offset_right = 1920.0
offset_bottom = 2160.0
theme = SubResource("Theme_qaph5")
clip_text = true

[node name="GridCalendar" type="GridContainer" parent="."]
offset_left = 1920.0
offset_top = 706.0
offset_right = 3840.0
offset_bottom = 2161.0
theme = SubResource("Theme_7sear")
columns = 7

[node name="BackgroundSprite" type="Sprite2D" parent="."]
z_index = -1
centered = false

[node name="PanelOption" parent="." instance=ExtResource("3_5m56c")]
offset_top = 700.0
offset_right = 3840.0
offset_bottom = 1718.0

[node name="ButtonOption" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
icon = ExtResource("3_p67cb")

[node name="AutoHideOptionPanel" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ButtonOption" to="." method="_on_button_option_pressed"]
[connection signal="timeout" from="AutoHideOptionPanel" to="." method="_on_auto_hide_option_panel_timeout"]
